--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "ejs": "^3.0.2",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "gh-pages": "^5.0.0"
   }
 }
